--- a/part2/ex2.6/docker-compose.yml
+++ b/part2/ex2.6/docker-compose.yml
@@ -4,6 +4,12 @@ services:
   redis:
     image: redis
     container_name: cache
+  db:
+    image: postgres
+    container_name: database
+    restart: unless-stopped
+    environment:
+      POSTGRES_PASSWORD: example
   frontend:
     image: frontend-example
     build: ./frontend
@@ -16,10 +22,14 @@ services:
     build: ./backend
     depends_on:
       - redis
+      - db
     links:
       - redis
     environment:
       - FRONT_URL=http://localhost:5000
       - REDIS=redis
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=example
+      - DB_HOST=db
     ports:
       - 8000:8000
