--- a/part2/ex2.9/docker-compose.yml
+++ b/part2/ex2.9/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     restart: unless-stopped
     environment:
       POSTGRES_PASSWORD: example
+    volumes:
+      - ./database:/var/lib/postgresql/data
   frontend:
     image: frontend-example
     build: ./frontend
