Clarifications for exercise 4

--- a/part3/ex3.3/backend/Dockerfile
+++ b/part3/ex3.3/backend/Dockerfile
@@ -2,6 +2,8 @@ FROM ubuntu:16.04
 
 COPY ./backend-example-docker /example/backend
 WORKDIR /example/backend
+# ENV FRONT_URL=http://localhost:5000 // if not defined in docker-compose
+
 
 RUN apt-get update && apt-get install -y curl && \
   curl -sL https://deb.nodesource.com/setup_10.x | bash && \ 
