--- a/part3/ex3.3/frontend/Dockerfile
+++ b/part3/ex3.3/frontend/Dockerfile
@@ -2,6 +2,7 @@ FROM ubuntu:16.04
 
 COPY ./frontend-example-docker /example/frontend
 WORKDIR /example/frontend
+# ENV API_URL=http://localhost:8000 If not defined in docker-compose
 
 RUN apt-get update && apt-get install -y curl && \
   curl -sL https://deb.nodesource.com/setup_10.x | bash && \
