--- a/part3/ex3.4/backend/Dockerfile
+++ b/part3/ex3.4/backend/Dockerfile
@@ -1,9 +1,11 @@
 FROM node:10-alpine
 
 ENV NODE_ENV=production
+# ENV FRONT_URL=http://localhost:5000 // if not defined in docker-compose
 
 COPY ./backend-example-docker /example/backend
 WORKDIR /example/backend
+
 
 RUN npm install && chown -R node node_modules logs.txt
 
