--- a/part3/ex3.4/frontend/Dockerfile
+++ b/part3/ex3.4/frontend/Dockerfile
@@ -2,6 +2,8 @@ FROM node:10-alpine
 
 ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
 ENV PATH=$PATH:/home/node/.npm-global/bin
+# ENV API_URL=http://localhost:8000 If not defined in docker-compose
+
 
 COPY ./frontend-example-docker /example/frontend
 WORKDIR /example/frontend
